<resources>
    <string name="app_name">EduSex</string>

    <string name="parseappid">0KOkrxQg64rTlDnMfCq6QhzUElUJ2Ip5SokFqYK4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_sections">MainSectionsActivity</string>
    <string name="inform">Informate</string>
    <string name="learnmore">Aprende mas&#8230;</string>
    <string name="news">NOTICIAS</string>
    <string name="historys">HISTORIAS</string>
    <string name="find">ENCUENTRA</string>
    <string name="knowyou">EduSex</string>
    <string name="title_activity_historys">Historias</string>
    <string name="loremipsum">Four pounds&#8230; foooour pounds as if two pounds wasn\'t bad enough. we\'re talking two three hundred boxes of sinus pills there ain\'t that many Smurfs in the world. So no sudo? So you do have a plan! Yeah, Mr. White! Yeah, science!   \nYo&#8230; it\'s appointment only! Jeez, you look like&#8230; Lex Luthor. I got two dudes turned into raspberry slushy and flushe</string>
    <string name="writeYourHistory">Escribe tu historia</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_more_info">MoreInfoActivity</string>
    <string name="title_activity_more_info_descript">MoreInfoDescriptActivity</string>
    <string name="knowmore">Ver mas...</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_find">FindActivity</string>
</resources>
